.metadata/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:52:44 **** Incremental Build of configuration Debug for project Ejercicio-4.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ejercicio-4.1.o" "..\\src\\Ejercicio-4.1.c" 
gcc -o Ejercicio-4.1.exe "src\\Ejercicio-4.1.o" "src\\Validaciones.o" 
Info: Nothing to build for Ejercicio-3.5
Info: Nothing to build for Ejercicio-4.1
Info: Nothing to build for Ejercicio-4.1
Info: Nothing to build for Ejercicio-4.1
21:54:44 **** Incremental Build of configuration Debug for project Ejercicio-4.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ejercicio-4.1.o" "..\\src\\Ejercicio-4.1.c" 
gcc -o Ejercicio-4.1.exe "src\\Ejercicio-4.1.o" "src\\Validaciones.o" 
Info: Nothing to build for Ejercicio-4.1
Info: Nothing to build for Ejercicio-4.1
Info: Nothing to build for Ejercicio-4.1
Info: Nothing to build for Ejercicio-4.1
22:05:56 **** Incremental Build of configuration Debug for project Ejercicio-4.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ejercicio-4.1.o" "..\\src\\Ejercicio-4.1.c" 
gcc -o Ejercicio-4.1.exe "src\\Ejercicio-4.1.o" "src\\Validaciones.o" 
Info: Nothing to build for Ejercicio-4.1
22:07:25 **** Incremental Build of configuration Debug for project Ejercicio-4.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ejercicio-4.1.o" "..\\src\\Ejercicio-4.1.c" 
..\src\Ejercicio-4.1.c:41:10: error: expected declaration specifiers or '...' before string constant
   41 |   printf("El resultado es: %d",acumulador);
      |          ^~~~~~~~~~~~~~~~~~~~~
..\src\Ejercicio-4.1.c:41:32: error: unknown type name 'acumulador'
   41 |   printf("El resultado es: %d",acumulador);
      |                                ^~~~~~~~~~
..\src\Ejercicio-4.1.c:42:1: error: expected identifier or '(' before '}' token
   42 | }
      | ^
22:12:24 **** Incremental Build of configuration Debug for project Ejercicio-4.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ejercicio-4.1.o" "..\\src\\Ejercicio-4.1.c" 
gcc -o Ejercicio-4.1.exe "src\\Ejercicio-4.1.o" "src\\Validaciones.o" 
Info: Nothing to build for Ejercicio-4.1
22:20:24 **** Incremental Build of configuration Debug for project Ejercicio-4.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ejercicio-4.1.o" "..\\src\\Ejercicio-4.1.c" 
gcc -o Ejercicio-4.1.exe "src\\Ejercicio-4.1.o" "src\\Validaciones.o" 
Info: Nothing to build for Ejercicio-4.1
22:20:56 **** Incremental Build of configuration Debug for project Ejercicio-4.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ejercicio-4.1.o" "..\\src\\Ejercicio-4.1.c" 
gcc -o Ejercicio-4.1.exe "src\\Ejercicio-4.1.o" "src\\Validaciones.o" 
Info: Nothing to build for Ejercicio-4.1
22:21:15 **** Incremental Build of configuration Debug for project Ejercicio-4.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ejercicio-4.1.o" "..\\src\\Ejercicio-4.1.c" 
gcc -o Ejercicio-4.1.exe "src\\Ejercicio-4.1.o" "src\\Validaciones.o" 
Info: Nothing to build for Ejercicio-4.1
Info: Nothing to build for Ejercicio-4.1
Info: Nothing to build for Ejercicio-4.1
22:23:36 **** Incremental Build of configuration Debug for project Ejercicio-4.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ejercicio-4.1.o" "..\\src\\Ejercicio-4.1.c" 
gcc -o Ejercicio-4.1.exe "src\\Ejercicio-4.1.o" "src\\Validaciones.o" 
Info: Nothing to build for Ejercicio-4.1
Info: Nothing to build for Ejercicio-4.1
22:24:17 **** Incremental Build of configuration Debug for project Ejercicio-4.1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ejercicio-4.1.o" "..\\src\\Ejercicio-4.1.c" 
gcc -o Ejercicio-4.1.exe "src\\Ejercicio-4.1.o" "src\\Validaciones.o" 
Info: Nothing to build for Ejercicio-4.1
Info: Nothing to build for Ejercicio-4.1
Info: Nothing to build for Ejercicio-4.1
